fixes #14: Buslist, registration page with buttons back, startpage aligning

--- a/ecobasa/static/sass/main.scss
+++ b/ecobasa/static/sass/main.scss
@@ -152,6 +152,10 @@ a[data-toggle=tooltip] {
 
 /***************Communities**************/
 
+.community-map {
+	z-index: 1;
+}
+
 .community-map-small { 
 	height: 300px; 
 }
@@ -189,15 +193,11 @@ a[data-toggle=tooltip] {
 
 /*********** Registration **************/
 
-#slide-register-as {
-  width: 50%;
-  margin: 0 auto;
-  .btn {
-	  width: 100%;
-	  padding: 10%;
-	  margin: 5% auto;
-	  font-size: xx-large;
-	}
+.register.btn {
+	width: 100%;
+	padding: 10%;
+	margin: 5% auto;
+	font-size: xx-large;
 }
 
 .navbar.navbar-default.registration {
@@ -231,8 +231,6 @@ a[data-toggle=tooltip] {
   text-align: center;
 }
 
-#slide-community-basic .register button,
-#slide-member-bus-details .register button
 #slide-member-bus-ask button.None {
 	font-size: xx-large;
 	margin-top: 40px;
